--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.9.10",
     "@clerk/themes": "^2.2.34",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-accordion": "^1.2.7",
@@ -25,6 +26,8 @@
     "@radix-ui/react-tabs": "^1.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "data-fns": "^1.1.0",
+    "date-fns": "^4.1.0",
     "inngest": "^3.35.0",
     "lucide-react": "^0.501.0",
     "next": "15.1.4",
@@ -32,6 +35,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-spinners": "^0.17.0",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
